<resources>
    <string name="app_name">Real Madrid Squad 24/25</string>
    <string name="title_name">Real Madrid Squad 24/25</string>
    <string name="creator_app_profile">Creator App Profile</string>
    <string name="real_madrid_profile">Real Madrid Profile</string>
    <string name="name_dzulfikar_fauzi"><![CDATA[Name >> DZULFIKAR FAUZI]]></string>
    <string name="info_about_me">Click this for known info about me</string>
    <string name="website_dzulfikar68_github_io"><![CDATA[Website >> dzulfikar68.github.io]]></string>
    <string name="email_dzulfikar68_fauzi_gmail_com"><![CDATA[Email >> dzulfikar68.fauzi@gmail.com]]></string>
    <string name="role_android_developer"><![CDATA[Role >> Android Developer]]></string>
    <string name="click_here_for_next_info">Click here for next info</string>
    <string name="title_about">About Real Madrid (in Bahasa)</string>
    <string name="desc_about">Real Madrid adalah klub sepak bola profesional yang berbasis di Madrid, Spanyol. \n\nKlub ini telah menjadi klub terbesar dalam sejarah sepakbola sejak didirikan tahun 1902. \n\nDianugerahi sebagai Klub Terbaik Abad Ini oleh FIFA di awal millenium baru sebagai penghargaan atas sukses mereka. \n\nLos Blancos (julukan lain Real Madrid) telah memenangkan: 32 titel La Liga, 19 piala domestik dan sebuah rekor 10 Piala Eropa.</string>
</resources>