<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/black_282E3C"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_marginTop="30dp"
        android:id="@+id/tool_bar"
        android:background="@color/black_282E3C"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        app:title="@string/creator_app_profile"
        app:titleTextAppearance="@style/DaddyPackageToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_505C7C"/>

    <RelativeLayout
        android:orientation="vertical"
        android:background="@color/yellow_FDFF00"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/top"
            android:background="@color/yellow_FDFF00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:paddingVertical="20dp"
                android:background="@color/black_282E3C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/gold_988829"
                    app:cardCornerRadius="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_photo"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/ic_profile"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/bottom"
            android:layout_below="@id/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/tile_logos"
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/gold_988829"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_marginVertical="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:paddingVertical="5dp"
                    tools:ignore="RtlSymmetry"
                    android:background="@drawable/square_shape"
                    style="@style/Tumbler"
                    android:textSize="30sp"
                    android:textColor="@color/black_282E3C"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_dzulfikar_fauzi"/>
                <TextView
                    android:paddingVertical="5dp"
                    tools:ignore="RtlSymmetry"
                    style="@style/Tumbler"
                    android:textSize="30sp"
                    android:textColor="@color/black_282E3C"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_dzulfikar68_fauzi_gmail_com"/>
                <TextView
                    android:paddingVertical="5dp"
                    tools:ignore="RtlSymmetry"
                    android:background="@drawable/square_shape"
                    style="@style/Tumbler"
                    android:textSize="30sp"
                    android:textColor="@color/black_282E3C"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_android_developer"/>
                <TextView
                    android:paddingVertical="5dp"
                    tools:ignore="RtlSymmetry"
                    style="@style/Tumbler"
                    android:textSize="30sp"
                    android:textColor="@color/black_282E3C"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/website_dzulfikar68_github_io"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_profile"
                    app:icon="@drawable/baseline_account_circle_24"
                    android:layout_marginTop="25dp"
                    app:backgroundTint="@color/gold_988829_3"
                    android:layout_gravity="center"
                    style="@style/DaddyPackage"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_about_me"/>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>